src/test/deca/syntax/valid/SyntaxObject/test_extends.deca
// Description:
//  test de classe mère/classe fille (initialisation, méthodes et attributs hérités)
//
// Resultats:
//  
// 
// Historique:
//    cree le 15/01/2023

class A{
    public String field1="héritage d'attribut valide";
    public void printValide(){
        println("héritage de méthode valide");
    }
}

class B extends A{}


{
    B b;
    println(b.field1);
    b.method1();
}