src/test/deca/syntax/invalid/22.class_mal_defini.deca
// Description:
//    Test d'une classe mal défini
//
// Resultats:
//    Ligne 10
//
// Historique:
//    cree le 01/01/2023

class A extends {


}